istio/virtualservices/user-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-virtualservice
  namespace: k8s
spec:
  hosts:
  - "*"
  gateways:
  - k8s/k8s-gateway
  http:
  - match:
    - uri:
        prefix: /user-service
    rewrite:
      uri: /
    route:
    - destination:
        host: user-service
        port:
          number: 80
